// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/accounts/:accountId/invites GET /api/chairs should fetch 2 chairs 1`] = `
Object {
  "entities": Object {
    "chairs": Object {
      "23d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-20T00:14:30.932Z",
        "id": "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "name": "C1",
      },
      "46d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-20T00:14:30.932Z",
        "id": "46d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "name": "C2",
      },
    },
  },
  "result": Array [
    "46d4e661-1155-4494-8fdb-c4ec0ddf804d",
    "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
  ],
}
`;

exports[`/api/accounts/:accountId/invites POST /api/chairs should create an chair 1`] = `
Object {
  "entities": Object {
    "chairs": Object {
      "11d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-20T00:14:30.932Z",
        "id": "11d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "name": "New Chair",
      },
    },
  },
  "result": "11d4e661-1155-4494-8fdb-c4ec0ddf804d",
}
`;

exports[`/api/accounts/:accountId/invites PUT /api/chairs/:chairId should update a chair 1`] = `
Object {
  "entities": Object {
    "chairs": Object {
      "23d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-20T00:14:30.932Z",
        "id": "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "name": "Modified Chair Name",
      },
    },
  },
  "result": "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
}
`;
